Found the bug and fixed it. It was quite simple: the file attribute struct was erasing the encoding before it was even first used.

To be backported.
BUG:66411

svn path=/trunk/kdebase/kioslave/; revision=397353